# CrickVision

./: .env.example  AGENTS.md  biome.json  drizzle.config.ts  env.ts  middleware.ts  package.json  vitest.config.ts
.cursor/: hooks.json
.cursor/hooks/: check.sh  secret-scan.sh
app/: globals.css  layout.tsx
app/(app)/: layout.tsx
app/(marketing)/: page.tsx
components/app/: AppHeaderEmail.tsx  AppSidebar.tsx
components/charts/: ContactHeatMap.tsx  EmptyChart.tsx  LineLengthHeatMap.tsx  OverTimeline.tsx  PitchMap.tsx  ShotSelectionPanel.tsx  ShotZoneHeatMap.tsx  WagonWheel.tsx  types.ts
components/delivery/: DeliveryInspector.tsx  DeliveryRowItem.tsx  TrajectoryOverlay.tsx
components/match/: ExportButton.tsx  MatchCard.tsx  MatchTabs.tsx  ProcessingStatus.tsx  StatsTable.tsx  UploadTabs.tsx
components/ui/: accordion.tsx  alert-dialog.tsx  avatar.tsx  breadcrumb.tsx  button-group.tsx  calendar.tsx  carousel.tsx  chart.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  hover-card.tsx  input-group.tsx  item.tsx  (+12 more)
lib/: auth.ts  format.ts  rate-limit.ts  storage.ts
services/cv/: .gitignore  Makefile  README.md  app.py  modal_deploy.py  models.py  pyproject.toml
services/cv/jobs/: export_corrections.py
services/cv/pipeline/: __init__.py  aggregate.py  derive.py  detect.py  downloader.py  frames.py  homography.py  image_only.py  llm.py  phases.py  pose.py  segment.py  state.py  track.py  webhook.py
services/cv/stubs/: deliveries.json
services/cv/tests/: conftest.py  test_pipeline.py
tests/: cv-contract.test.ts
(+54 files in other folders)
