[project]
name = "cricket-cv"
version = "0.1.0"
description = "Cricket vision pipeline — YOLOv11, ByteTrack, MediaPipe, OpenCV, Gemini"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "httpx>=0.27",
  "python-multipart>=0.0.18",
  # CV core — light enough for both stub mode and Modal CPU image.
  "numpy>=2.0",
  "opencv-python-headless>=4.10",
  "pillow>=10.4",
  "yt-dlp>=2024.10.0",
]

[project.optional-dependencies]
ml = [
  "ultralytics>=8.3",       # YOLOv11
  "supervision>=0.24",      # ByteTrack helpers
  "mediapipe>=0.10",
  "paddleocr>=2.8",
  "google-genai>=0.5",      # Gemini structured output
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "modal>=0.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "B", "UP", "SIM", "RET", "ARG"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
